fixed figure size and alignment

--- a/style.css
+++ b/style.css
@@ -229,6 +229,10 @@ ul.collinks {
     margin: 0 auto;
 }
 
+figure img {
+    width: 100%;
+}
+
 figcaption {
     font-family: 'W95font', sans-serif;
     font-size: 20px;
